Use Set#of where possible